Closed
Bug 1280280
Opened 9 years ago
Closed 9 years ago
Uplift cubeb to revision 073c9f011114
Categories
(Core :: Audio/Video: cubeb, defect, P2)
Core
Audio/Video: cubeb
Tracking
()
RESOLVED
FIXED
mozilla50
| Tracking | Status | |
|---|---|---|
| firefox50 | --- | fixed |
People
(Reporter: padenot, Assigned: padenot)
References
Details
Attachments
(2 files)
|
1.03 KB,
patch
|
kinetik
:
review+
|
Details | Diff | Splinter Review |
|
60.50 KB,
patch
|
kinetik
:
review+
|
Details | Diff | Splinter Review |
This gives us:
- Bigger stacks on WASAPI to prevent some rare crashes
- A couple resampler fixes for the input-only case (that we don't use in Gecko)
- A new Jack backend. The file will be imported and we're dealing wiring up the build system bit in bug 783733
- A compiled test fix found by the author of the jack backend
- Some assertion to diagnose bug 1274902
| Assignee | ||
Comment 1•9 years ago
|
||
Updated•9 years ago
|
Rank: 25
Priority: -- → P2
| Assignee | ||
Comment 2•9 years ago
|
||
This simply adds the file, but does not wire it in the build system.
Attachment #8763087 -
Flags: review?(kinetik)
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → padenot
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•9 years ago
|
||
This also has all been reviewed by Mozilla people upstream.
Attachment #8763088 -
Flags: review?(kinetik)
Comment 4•9 years ago
|
||
Comment on attachment 8763087 [details] [diff] [review]
Update `media/libcube/update.sh` to add `cubeb_jack.cpp`
Review of attachment 8763087 [details] [diff] [review]:
-----------------------------------------------------------------
Hmm, we should probably sort the file list in update.sh.
Attachment #8763087 -
Flags: review?(kinetik) → review+
Updated•9 years ago
|
Attachment #8763088 -
Flags: review?(kinetik) → review+
Pushed by paul@paul.cx:
https://hg.mozilla.org/integration/mozilla-inbound/rev/bef268bc063a
Update `media/libcube/update.sh` to add `cubeb_jack.cpp`, and sort the list of files. r=kinetik
https://hg.mozilla.org/integration/mozilla-inbound/rev/8f0d4dcde00a
Update cubeb to 073c9f011114. r=kinetik
Comment 6•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/bef268bc063a
https://hg.mozilla.org/mozilla-central/rev/8f0d4dcde00a
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox50:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in
before you can comment on or make changes to this bug.
Description
•